--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -79,6 +79,16 @@
             required
           />
         </div>
+        <div class="input-box">
+          <label for="Confirmpassword">ID Estudantil</label>
+          <input
+            if=" Confirmpassword"
+            type="password "
+            name="Confirmpassword"
+            placeholder="Digite o ID estudantil"
+            required
+          />
+        </div>
         <!-- Seletor de sexo -->
       </div>
       <div class="gender-inputs">
