--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,8 +6,9 @@
   font-family: "Inter", sans-serif;
 }
 
-nav{
+nav {
   background-color: rgba(245, 245, 245, 0.6);
+  border-radius: 0px 0px 3px 3px;
 }
 section {
   padding: 60px 0;
@@ -15,11 +16,7 @@ section {
 
 body {
   background-color: #4158d0;
-  background-image: linear-gradient(
-    129deg,
-    #4158d0 0%,
-    #c850c0 75%
-  );
+  background-image: linear-gradient(129deg, #4158d0 0%, #c850c0 75%);
 }
 
 h1 {
@@ -47,7 +44,7 @@ header {
   background: #0c0ce94d;
 }
 
-.logo{
+.logo {
   width: 8%;
   height: 8%;
 }
@@ -237,9 +234,4 @@ header {
   .gender-input {
     margin-top: 0.5rem;
   }
-}
-
-.links-navbar a:hover{
-  color: black;
-
 }
