--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,8 +38,12 @@
             >
               <ul class="navbar-nav">
                 <li class="nav-item ">
-                  <a class="nav-link text-white links-navbar" href="#login">Sair</a>
+                <li class="nav-item ">
+                  <a class="nav-link text-white" href="cadastro">Cadastro</a>
                 </li>
+                  <a class="nav-link text-white" href="login">login</a>
+                </li>
+                
               </ul>
             </div>
           </div>
