--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -1,12 +1,8 @@
 <div class="container">
-  <!--Imagem-->
-  <div class="form-image">
-    <img src="../images/carro.png" alt="" />
-  </div>
   <!-- Forms -->
   <div class="form">
     <!-- cabeça do cadastro -->
-    <form action="#">
+    <form action="#" class="backwhite">
       <div class="form-header">
         <div class="title">
           <h1>Cadastre-se</h1>
