--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,45 @@
-<h1>Home</h1>
+<div class="container">
+  <!--Imagem-->
+  <div class="form-image">
+    <img src="../images/carro.png" alt="" />
+  </div>
+  <!-- Forms -->
+  <div class="form">
+    <!-- cabeça do cadastro -->
+    <form action="#" class="backwhite">
+      <div class="form-header">
+        <div class="title">
+          <h1>Seja bem vindo</h1>
+        </div>
+      </div>
+
+      <div class="input-group">
+        <div class="input-box">
+          <label>Faculdade</label>
+          <input
+            type="text"
+            placeholder="Selecione sua faculdade"
+            required
+          />
+        </div>
+
+        <div class="input-box">
+          <label>Chegada</label>
+          <input
+            type="text"
+            placeholder="Local de chegada"
+            required
+          />
+        </div>
+
+        <div class="input-box">
+          <label>Data</label>
+         <input type="date" id="start" name="trip-start"
+       value="">
+        </div>
+      </div>
+       <div class="continue-button-home">
+        <button><a href="#">Continuar</a></button>
+      </div>
+    </form> 
+  </div>
