--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,7 @@
     </div>
     <div class="container">
-      <div class="form-image">
-        <img src="./images/carro.png" alt="" />
-      </div>
       <div class="form">
-        <form action="#">
+        <form action="#" class="backwhite">
           <div class="form-header">
             <div class="title">
               <h1>Entrar</h1>
@@ -48,5 +45,3 @@
         </div>
         </form>
       </div>
-
-  
