--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,18 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
-
+.title {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.backwhite {
+  background-color: rgba(255, 255, 255, 0.288);
+  border-radius: 20px;
+  padding: 0.7rem;
+}
 nav {
   background-color: rgba(245, 245, 245, 0.6);
   border-radius: 0px 0px 3px 3px;
@@ -60,7 +71,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  padding: 50px;
 }
 
 .form-image img {
@@ -79,7 +90,7 @@ header {
 .form-header {
   margin-bottom: 3rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .login-button {
@@ -118,7 +129,6 @@ header {
 .input-group {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   padding: 1rem 0;
   color: #fff;
 }
@@ -126,7 +136,7 @@ header {
 .input-box {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1.1rem;
+  margin-bottom: 0px;
   color: #fff;
   padding: 6px;
 }
@@ -199,6 +209,25 @@ header {
   font-weight: 500;
   color: #fff;
 }
+.continue-button-home button {
+  width: 100%;
+  margin-top: 2.5rem;
+  border: none;
+  background-color: #6c63ff;
+  padding: 0.62rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.continue-button-home button:hover {
+  background-color: #6b63ffc3;
+}
+
+.continue-button-home button a {
+  text-decoration: none;
+  font-size: 0.93rem;
+  font-weight: 500;
+  color: #fff;
+}
 
 @media screen and(max-width: 1330px) {
   .form-image {
@@ -216,7 +245,6 @@ header {
 @media screen and(max-width: 1064px) {
   .container {
     width: 90%;
-    height: auto;
   }
   .input-group {
     flex-direction: column;
