--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -29,13 +29,13 @@
             </div>
           
           <div class="gender-inputs">
-            <div class="gender-title">
-              <h6>Manter Conectado</h6>
-            </div>
             <div class="gender-group">
               <div class="gender-inputs">
                 <input type="checkbox" id="Conectado" />
                 <label for="connected">
+                  <h6>
+                    Manter Conectado
+                  </h6>
                 </label>
               </div>
 
