--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,13 +37,19 @@
               id="main-nav"
             >
               <ul class="navbar-nav">
+                {{#if loggedin}}
                 <li class="nav-item ">
-                <li class="nav-item ">
-                  <a class="nav-link text-white" href="cadastro">Cadastro</a>
-                </li>
-                  <a class="nav-link text-white" href="login">login</a>
+                  <a class="nav-link text-white" href="Cadastro">Cadastro</a>
                 </li>
                 
+                <li class="nav-item ">
+                  <a class="nav-link text-white" href="Login">login</a>
+                </li>
+                {{else}}
+                <li class="nav-item ">
+                  <a class="nav-link text-white" href="Sair">login</a>
+                </li>
+                {{/if}}
               </ul>
             </div>
           </div>
@@ -52,6 +58,7 @@
     
 
   <body>
+
     {{{body}}}
 
     <scripts
