--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
     </div>
     <div class="container">
       <div class="form">
-        <form action="#" class="backwhite">
+        <form action="/login" method="post" class="backwhite">
           <div class="form-header">
             <div class="title">
               <h1>Entrar</h1>
@@ -12,7 +12,7 @@
               <input
                 if=" email "
                 type="email "
-                name="email "
+                name="email"
                 placeholder="Digite seu email "
                 required
               />
@@ -40,7 +40,7 @@
               </div>
 
           <div class="continue-button">
-            <button><a href="">Continuar</a></button>
+            <input type="submit" value="Logar">
           </div>
         </div>
         </form>
