--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student Ride Share</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href= "../css/style.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -37,17 +37,19 @@
               id="main-nav"
             >
               <ul class="navbar-nav">
+
                 {{#if loggedin}}
+                <li class="nav-item ">
+                  <a class="nav-link text-white" href="logout">Sair</a>
+                {{else}}
                 <li class="nav-item ">
                   <a class="nav-link text-white" href="Cadastro">Cadastro</a>
                 </li>
-                
                 <li class="nav-item ">
-                  <a class="nav-link text-white" href="Login">login</a>
+                  <a class="nav-link text-white" href="Login">Login</a>
                 </li>
-                {{else}}
-                <li class="nav-item ">
-                  <a class="nav-link text-white" href="Sair">login</a>
+
+                
                 </li>
                 {{/if}}
               </ul>
