--- a/views/cadastro.hbs
+++ b/views/cadastro.hbs
@@ -58,7 +58,7 @@
           <label for="password">Senha</label>
           <input
             if=" password"
-            type="password "
+            type="password"
             name="password"
             placeholder="Digite sua senha "
             required
@@ -69,7 +69,7 @@
           <label for="Confirmpassword">Confirme sua senha </label>
           <input
             if=" Confirmpassword"
-            type="password "
+            type="password"
             name="Confirmpassword"
             placeholder="Digite sua senha "
             required
@@ -79,7 +79,7 @@
           <label for="carteirinha">ID Estudantil</label>
           <input
             if=" Carteirinha"
-            type="password"
+            type="letter"
             name="idEstudantil"
             placeholder="Digite o ID estudantil"
             required
@@ -103,14 +103,14 @@
         </div>
         <div class="gender-group">
           <div class="gender-inputs">
-            <input type="checkbox" name="gender" />
+            <input type="checkbox" name="driver" />
             <label>Motorista</label>
           </div>
         </div>
       </div>
 
       <div class="continue-button">
-        <button><a href="#">Continuar</a></button>
+        <input type="submit" value="Cadastrar">
       </div>
     </form>
   </div>
