--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -41,6 +41,7 @@
                 {{#if loggedin}}
                 <li class="nav-item ">
                   <a class="nav-link text-white" href="logout">Sair</a>
+                </li>
                 {{else}}
                 <li class="nav-item ">
                   <a class="nav-link text-white" href="Cadastro">Cadastro</a>
@@ -48,8 +49,6 @@
                 <li class="nav-item ">
                   <a class="nav-link text-white" href="Login">Login</a>
                 </li>
-
-                
                 </li>
                 {{/if}}
               </ul>
@@ -63,6 +62,7 @@
 
     {{{body}}}
 
+    <script src="../../frontend/home.js"></script>
     <scripts
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
