--- a/views/cadastro.hbs
+++ b/views/cadastro.hbs
@@ -110,7 +110,7 @@
       </div>
 
       <div class="continue-button">
-        <input type="submit" value="Cadastrar">
+        <input type="submit" class="btn btn-primary" value="Cadastrar">
       </div>
     </form>
   </div>
