--- a/views/login.hbs
+++ b/views/login.hbs
@@ -40,7 +40,7 @@
               </div>
 
           <div class="continue-button">
-            <input type="submit" value="Logar">
+            <input type="submit" class="btn btn-primary" value="Logar">
           </div>
         </div>
         </form>
