--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,23 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
+.main-cards{
+  justify-content: space-between;
+  display: flex;
+  
+}
+.card-unit{
+  background-color: rgba(255, 255, 255, 0.288);
+  width: 300px;
+  height: 400px;
+  margin-left: 20px;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
+  color: white;
+  box-shadow: 2px 3px rgba(0, 0, 0, 0.123);
+  
+}
 .title {
   width: 100%;
   height: 100%;
@@ -101,14 +118,14 @@ header {
 
 .login-button button {
   border: none;
-  background-color: #6c63ff;
+  background-color: #8d87ff;
   padding: 0.4rem 1rem;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .login-button button:hover {
-  background-color: #6b63ffd1;
+  background-color: #3c37aad1;
 }
 
 .login-button button a {
@@ -267,3 +284,75 @@ header {
 .form-motorista{
   margin-top: 40px;
 }
+
+
+
+.main-container{
+  width: 1150px;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.main-container .card{
+  position: relative;
+  padding: 10px;
+  width: 300px;
+ background-color: rgba(255, 255, 255, 0.288);
+ margin: 20px;
+ border: 1px solid black;
+ border-radius: 20px;
+ overflow: hidden;
+ transition: 0.5s;
+ text-align: center;
+} 
+
+.main-container .card img{
+  transform: 0.5s;
+}
+
+.main-container .card h1{
+  font-size: 2rem;
+}
+
+.main-container .card .content{
+  padding: 20px;
+  text-align: center;
+}
+
+.main-container .card .content p{
+  color: rgb(255, 255, 255);
+  transition: 0.5s;
+}
+
+.main-container .card .content a{
+  position: relative;
+  display: inline-block;
+  padding:  10px 20 px;
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  border-radius: 40px;
+  text-decoration: none;
+  transform: 0.5s;
+  outline: none;
+  margin-top: 20px;
+}
+
+
+
+
+.main-container .card:hover img{
+  filter: invert(1);
+}
+
+.main-container .card:hover .content p{
+ color: #fff;
+}
+
+.main-container .card:hover .content a{
+  color: rgb(0, 0, 0);
+  background-color: #fff;
+}
+
